--- a/pages/18070.html
+++ b/pages/18070.html
@@ -763,7 +763,7 @@ margin-left: 0em;
 <li><a href='#stable_splitting_of_mapping_spaces'>Stable splitting of mapping spaces</a></li>
 <li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
 <li><a href='#ReferencesCompactification'>Compactification</a></li>
-<li><a href='#relation_to_graph_complexes'>Relation to graph complexes</a></li>
+<li><a href='#cohomology_modeled_by_graph_complexes'>Cohomology modeled by graph complexes</a></li>
 </ul>
 </ul>
 </div>
@@ -1243,12 +1243,34 @@ margin-left: 0em;
 
 <p>This underlies the models of configuration spaces by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a>, see there for more.</p>
 
-<h3 id="relation_to_graph_complexes">Relation to graph complexes</h3>
+<h3 id="cohomology_modeled_by_graph_complexes">Cohomology modeled by graph complexes</h3>
 
-<p>Models for the <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> of configuration in terms of <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> are discussed in</p>
+<p>That the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of (the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of) configuration spaces of points may be modeled by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> (exhibiting <span class="newWikiWord">formality of the little n-disk operads<a href="/nlab/new/formality+of+the+little+n-disk+operads">?</a></span>) is due to</p>
 
 <ul>
-<li id="CamposWillwacher16"><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</li>
+<li id="Kontsevich99b"><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, around Def. 15 and Lemma 3 in <em>Operads and Motives in Deformation Quantization</em>, Lett.Math.Phys.48:35-72,1999 (<a href="https://arxiv.org/abs/math/9904055">arXiv:math/9904055</a>)</li>
+</ul>
+
+<p>niecely reviewed in</p>
+
+<ul>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+</ul>
+
+<p>Further discussion of the graph complex as a model for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> is in</p>
+
+<ul>
+<li id="CamposWillwacher16">
+<p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>Configuration Spaces of Manifolds with Boundary</em> (<a href="https://arxiv.org/abs/1802.00716">arXiv:1802.00716</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, Julien Ducoulombier, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for framed configuration spaces of points</em> (<a href="https://arxiv.org/abs/1807.08319">arXiv:1807.08319</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -1256,14 +1278,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 12:43:24.
+  Last revised on November  4, 2018 at 01:53:38.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
