--- a/pages/19905.html
+++ b/pages/19905.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -902,6 +902,10 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#definition'>Definition</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_the_little_disk_operad'>Relation to the little <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-disk operad</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -1026,6 +1030,18 @@ margin-left: 0em;
 
 <p>The <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Sigma(n)</annotation></semantics></math> still canonically <a class="existingWikiWord" href="/nlab/show/action">acts</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>FM</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">FM_n(\mathbb{R}^d)</annotation></semantics></math> and hence the FM-compactification of the actual <a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Conf</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Conf_n(\mathbb{R}^d)</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/quotient+space">quotient space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>FM</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mi>Σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">FM_n(\mathbb{R}^d)/\Sigma(n)</annotation></semantics></math>.</p>
 
+<h2 id="properties">Properties</h2>
+
+<h3 id="relation_to_the_little_disk_operad">Relation to the little <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-disk operad</h3>
+
+<div class="num_prop">
+<h6 id="proposition">Proposition</h6>
+
+<p>The Fulton-MacPherson operad is <a class="existingWikiWord" href="/nlab/show/weak+equivalence">weakly equivalent</a> in the <a class="existingWikiWord" href="/nlab/show/model+structure+on+operads">model structure on operads</a> with respect to the <a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+topological+spaces">classical model structure on topological spaces</a>, to the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a></p>
+</div>
+
+<p>(<a href="#Salvatore01">Salvatore 01, Prop. 4.9</a>, summarized as <a href="#LambrechtsVolic14">Lambrechts-Volic 14</a>)</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1072,6 +1088,12 @@ margin-left: 0em;
 
 <p>which also shows the equivalence to <a href="#FultonMacPherson94">Fulton-MacPherson 94</a>.</p>
 
+<p>The equivalence to the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a> was established in</p>
+
+<ul>
+<li id="Salvatore01">Paolo Salvatore, <em>Configuration spaces with summable labels</em>, Cohomological methods in homotopy theory. Birkhäuser, Basel, 2001. 375-395.</li>
+</ul>
+
 <p>Review includes</p>
 
 <ul>
@@ -1083,14 +1105,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 15:02:52.
+  Last revised on November  4, 2018 at 01:59:45.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
