--- a/pages/2810.html
+++ b/pages/2810.html
@@ -484,6 +484,7 @@ margin-left: 0em;
 <li><a href='#MainResult'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-fold delooping, monoidalness and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔼</mi><mo stretchy="false">[</mo><mi>k</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\mathbb{E}[k]</annotation></semantics></math>-action</a></li>
 <li><a href='#StabilizationHypothesis'>Stabilization hypothesis</a></li>
 <li><a href='#AdditivityTheorem'>Additivity theorem</a></li>
+<li><a href='#cohomology_formality'>Cohomology: Formality</a></li>
 <li><a href='#homology_poisson_operads'>Homology: Poisson operads</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
@@ -654,6 +655,10 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>This is discussed and realized in section 1.2. of (<a href="#Lurie">Lurie</a>). The tensor product is defined in appendix B.7.</p>
 
+<h3 id="cohomology_formality">Cohomology: Formality</h3>
+
+<p><a class="existingWikiWord" href="/nlab/show/the+little+n-disk+operad+is+formal">the little n-disk operad is formal</a></p>
+
 <h3 id="homology_poisson_operads">Homology: Poisson operads</h3>
 
 <p>For an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mi>k</mi></msub></mrow><annotation encoding="application/x-tex">E_k</annotation></semantics></math>-operad in a <a class="existingWikiWord" href="/nlab/show/category+of+chain+complexes">category of chain complexes</a>, its <a class="existingWikiWord" href="/nlab/show/homology">homology</a> is the <span class="newWikiWord">Poisson operad<a href="/nlab/new/Poisson+operad">?</a></span> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>P</mi> <mi>k</mi></msub></mrow><annotation encoding="application/x-tex">P_{k}</annotation></semantics></math>.</p>
@@ -753,14 +758,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 13:00:29.
+  Last revised on November  4, 2018 at 01:35:45.
   See the <a href="https://ncatlab.org/nlab/history/little cubes operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/little+cubes+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/little+cubes+operad/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/little+cubes+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/little+cubes+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/little+cubes+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/little+cubes+operad/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/little+cubes+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/little+cubes+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/little cubes operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
