--- a/pages/4700.html
+++ b/pages/4700.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1807/#Item_19" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1807/#Item_20" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1005,6 +1005,28 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Decent review of the graph complex as a model for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> (exhibiting the <a class="existingWikiWord" href="/nlab/show/formal+smooth+manifold">formality</a> of the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operads">little n-disk operads</a>) is in</p>
+
+<ul>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+</ul>
+
+<p>Further discussion of the graph complex as a model for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> is in</p>
+
+<ul>
+<li id="CamposWillwacher16">
+<p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</p>
+</li>
+
+<li>
+<p>Ricardo Campos, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>Configuration Spaces of Manifolds with Boundary</em> (<a href="https://arxiv.org/abs/1802.00716">arXiv:1802.00716</a>)</p>
+</li>
+
+<li>
+<p>Ricardo Campos, Julien Ducoulombier, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for framed configuration spaces of points</em> (<a href="https://arxiv.org/abs/1807.08319">arXiv:1807.08319</a>)</p>
+</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -1076,26 +1098,20 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Alastair+Hamilton">Alastair Hamilton</a>, <a class="existingWikiWord" href="/nlab/show/Andrey+Lazarev">Andrey Lazarev</a>, <em>Graph cohomology classes in the <a class="existingWikiWord" href="/nlab/show/BV-BRST+formalism">Batalin-Vilkovisky formalism</a></em>, J.Geom.Phys. <strong>59</strong>:555-575, 2009, <a href="http://arxiv.org/abs/math/0701825">arxiv/0701825</a></p>
 </li>
 </ul>
-
-<p>Relation to <a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration spaces</a>:</p>
-
-<ul>
-<li id="CamposWillwacher16"><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</li>
-</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 12:49:18.
+  Last revised on November  4, 2018 at 01:30:36.
   See the <a href="https://ncatlab.org/nlab/history/graph complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/graph complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
