--- a/pages/8038.html
+++ b/pages/8038.html
@@ -975,7 +975,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/the+little+n-disk+operad+is+formal">the little n-disk operad is formal</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a>, <a class="existingWikiWord" href="/nlab/show/formality+of+the+little+n-disk+operad">formality of the little n-disk operad</a></p>
 </li>
 </ul>
 
@@ -1074,14 +1074,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 02:00:36.
+  Last revised on November  4, 2018 at 03:28:21.
   See the <a href="https://ncatlab.org/nlab/history/scattering amplitude" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/scattering+amplitude/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/scattering+amplitude/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/scattering amplitude/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
