--- a/pages/19905.html
+++ b/pages/19905.html
@@ -1185,6 +1185,8 @@ margin-left: 0em;
 <div class="num_defn" id="TheGraphComplexdgcAlgebra">
 <h6 id="definition_4">Definition</h6>
 
+<p><strong>(the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a>)</strong></p>
+
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">n\in \mathbb{N}</annotation></semantics></math>, write</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Graphs</mi> <mi>n</mi></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msub><mi>dgcAlg</mi> <mi>ℝ</mi></msub></mrow><annotation encoding="application/x-tex">
   Graphs_n\left( \mathbb{R}^d \right)
@@ -1210,7 +1212,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> <a class="existingWikiWord" href="/nlab/show/dgc-algebra">dgc-algebra</a> (Def. <a class="maruku-ref" href="#TheGraphComplexdgcAlgebra"></a>) to the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> (Prop. <a class="maruku-ref" href="#DeRhamCohomologyOfFMCompactification"></a>) of the Fulton-MacPherson compactification (Def. <a class="maruku-ref" href="#FultonMacPhersonCompactification"></a>) given on generators by</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mover><mi>I</mi><mo>¯</mo></mover><mrow><mo>(</mo><mi>Γ</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mo>]</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>Γ</mi><mspace width="thinmathspace"></mspace><mfrac linethickness="0"><mrow><mtext>is diagram without internal vertices</mtext></mrow><mrow><mtext>and single edge between external vertices</mtext><mspace width="thinmathspace"></mspace><mi>i</mi><mspace width="thinmathspace"></mspace><mtext>and</mtext><mspace width="thinmathspace"></mspace><mi>j</mi></mrow></mfrac></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>Γ</mi><mspace width="thinmathspace"></mspace><mtext>has internal vertices</mtext></mtd></mtr></mtable></mrow></mrow><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mover><mi>I</mi><mo>¯</mo></mover><mrow><mo>(</mo><mi>Γ</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mo>]</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>Γ</mi><mspace width="thinmathspace"></mspace><mfrac linethickness="0"><mrow><mtext>is diagram without internal vertices</mtext></mrow><mrow><mtext>and single edge between external vertices</mtext><mspace width="thinmathspace"></mspace><mi>i</mi><mspace width="thinmathspace"></mspace><mtext>and</mtext><mspace width="thinmathspace"></mspace><mi>j</mi></mrow></mfrac></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>Γ</mi><mspace width="thinmathspace"></mspace><mtext>has internal vertices</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
   \overline{I}\left( \Gamma \right)
   \;=\;
   \left\{
@@ -1220,7 +1222,6 @@ margin-left: 0em;
       0 &amp;\vert&amp; \Gamma \, \text{has internal vertices}
     }
   \right.
-  \,,
 
 </annotation></semantics></math></div>
 <p>(where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mo>∈</mo><msup><mi>Ω</mi> <mo>•</mo></msup><mrow><mo>(</mo><msub><mi>FM</mi> <mi>n</mi></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">g_{i j} \in \Omega^\bullet\left(  FM_n\left( \mathbb{R}^d\right) \right)</annotation></semantics></math> are the <a class="existingWikiWord" href="/nlab/show/differential+forms">differential forms</a> from Def. <a class="maruku-ref" href="#SphereClassGeneratorsOfDeRhamCohomology"></a>)</p>
@@ -1229,6 +1230,46 @@ margin-left: 0em;
 </div>
 
 <p>(<a href="#LambrechtsVolic14">Lambrechts-Volic 14, Theorem 8.1</a>)</p>
+
+<p>Now we consider the analogous but richer quasi-isomorphism from the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> not just to the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of the compactified configuration space, but its full <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a>.</p>
+
+<div class="num_defn" id="FiberIntegrationOverInternalVertices">
+<h6 id="definition_5">Definition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/fiber+integration">fiber integration</a> over internal <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a>)</strong></p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>∈</mo><msub><mi>Graphs</mi> <mi>n</mi></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">\Gamma \in Graphs_n\left( \mathbb{R}^d \right)</annotation></semantics></math> an element in the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> (Def. <a class="maruku-ref" href="#TheGraphComplexdgcAlgebra"></a>) with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> internal vertices, write</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>FM</mi> <mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow></mtd></mtr> <mtr><mtd><msup><mo maxsize="1.8em" minsize="1.8em">↓</mo> <mpadded width="0"><mrow><msubsup><mi>π</mi> <mi>k</mi> <mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow></msubsup></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><msub><mi>FM</mi> <mi>n</mi></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    FM_{n + k}\left( \mathbb{R}^d \right)
+    \\
+    \Big\downarrow^{\mathrlap{\pi_k^{n + k}}}
+    \\
+    FM_{n}\left( \mathbb{R}^d\right)
+  }
+
+</annotation></semantics></math></div>
+<p>for the evident <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous function</a> between the Fulton-MacPherson compactifications of ordered <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> (Def. <a class="maruku-ref" href="#FultonMacPhersonCompactification"></a>) obtained by forgetting the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> “internal” of the total of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">n + k</annotation></semantics></math> points in a configuration.</p>
+
+<p>This canonically carries the <a class="existingWikiWord" href="/nlab/show/structure">structure</a> of a <a class="existingWikiWord" href="/nlab/show/fiber+bundle">fiber bundle</a> of <a class="existingWikiWord" href="/nlab/show/semi-algebraic+manifolds">semi-algebraic manifolds</a> and hence induces a <a class="existingWikiWord" href="/nlab/show/fiber+integration">fiber-</a> <a class="existingWikiWord" href="/nlab/show/integration+of+differential+forms">integration of differential forms</a> from minimal to partially algebraic differential forms:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><munder><mo>∫</mo><mrow><msubsup><mi>π</mi> <mi>k</mi> <mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow></msubsup></mrow></munder><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msubsup><mi>Ω</mi> <mi>min</mi> <mo>•</mo></msubsup><mrow><mo>(</mo><msub><mi>FM</mi> <mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow><mo>)</mo></mrow><mo lspace="0em" rspace="thinmathspace">lognrightarrow</mo><msubsup><mi>Ω</mi> <mi>PA</mi> <mrow><mo>•</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mi>d</mi><mo>⋅</mo><mi>k</mi></mrow></msubsup><mrow><mo>(</mo><msub><mi>FM</mi> <mi>n</mi></msub><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>)</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
+  \underset{ 
+    \pi_k^{n + k}
+  }{\int}
+  \;\colon\;
+  \Omega^\bullet_{min}
+  \left(
+    FM_{n + k}\left( \mathbb{R}^d \right)
+  \right)
+  \lognrightarrow
+  \Omega^{\bullet - d \cdot k}_{PA}
+  \left(
+    FM_n\left( \mathbb{R}^d \right)
+  \right)
+
+</annotation></semantics></math></div></div>
+
+<p>(<a href="#LambrechtsVolic14">Lambrechts-Volic 14, Theorem 5.8 and equation (111)</a>)</p>
 
 <p>(…)</p>
 
@@ -1301,14 +1342,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 06:50:28.
+  Last revised on November  4, 2018 at 07:40:26.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
